# slimy_mist

./: .gitignore  Cargo.toml  README.md  package-lock.json
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/data/characters/human/: male.animation.ron  male.collision.ron
assets/data/characters/npc/: slime.animation.ron  slime.collision.ron  slime.layers.ron
assets/data/characters/player/: male.assets.ron  male.layers.ron
assets/data/menus/: credits.ron
assets/data/particles/: blood.particle.ron  death.particle.ron  dust-trail.particle.ron  melee-attack.particle.ron  melee.particle.ron  walking-dust.particle.ron
assets/shaders/particles/: blood.wgsl  death.wgsl  dust_trail.wgsl  melee.wgsl
graphics/aseprite-scripts/: image_border.lua
graphics/characters/: human-male.aseprite  slime.aseprite
mobile/android/: build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: dummy.cpp
mobile/android/app/src/main/kotlin/dev/meinel/slimymist/: MainActivity.kt
mobile/android/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
mobile/ios/: build_rust_deps.sh
scripts/: build.sh  collider.sh  convert-audio.sh  drawable.sh  keytool-android.sh  run.sh  svg2webp.sh
src/: animations.rs  audio.rs  camera.rs  characters.rs  core.rs  debug.rs  dev_tools.rs  images.rs  input.rs  levels.rs  lib.rs  light.rs  lighting.rs  log.rs  main.rs  mobile.rs  physics.rs  procgen.rs  render.rs  screens.rs  ui.rs  utils.rs
src/animations/: audio.rs  jump.rs  particles.rs  sprites.rs
src/characters/: attack.rs  collision.rs  health.rs  movement.rs  nav.rs  npc.rs  player.rs
src/images/: layers.rs  outline.rs  palette.rs  sprites.rs  tiles.rs  transitions.rs
src/input/: actions.rs  joystick.rs  mock.rs  pointer.rs  ui.rs
src/input/ui/: nav.rs  scroll.rs
src/levels/: navmesh.rs  overworld.rs
src/log/: error.rs  warn.rs
src/menus/: credits.rs  main.rs  pause.rs  settings.rs
src/mobile/: android.rs
src/procgen/: characters.rs  chunks.rs  common.rs  lighting.rs  lights.rs  navmesh.rs
src/render/: camera.rs  light.rs  materials.rs  palette.rs  particles.rs  ysort.rs  z_levels.rs
src/render/particles/: effects.rs  materials.rs
src/screens/: gameplay.rs  loading.rs  splash.rs  title.rs
src/ui/: buttons.rs  directional_nav.rs  hud.rs  interaction.rs  menus.rs  nav.rs  palette.rs  widgets.rs  world.rs
src/ui/hud/: health.rs  joystick.rs
src/ui/menus/: credits.rs  pause.rs  settings.rs
src/ui/widgets/: bar.rs  button.rs
src/ui/world/: health.rs
src/utils/: color.rs  images.rs  rng.rs  run_conditions.rs  timers.rs
src/visual/: layers.rs  particles.rs
web/: index.html
