# Heavily inspired by: https://github.com/TheBevyFlock/bevy_new_2d

[package]
name = "slimy_mist"
# NOTE: Update with full semantic version on each release
version = "0.23.0"
edition = "2024"
license = "Apache-2.0"

# NOTE: lib.rs is required for mobile
[lib]
name = "slimy_mist"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "slimymist"
path = "src/main.rs"
doc = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
 "2d",
 "webp",
] }
bevy_asset_loader = { version = "0.25.0", features = [
 "2d",
 "standard_dynamic_assets",
 "progress_tracking",
] }
# FIXME: Update after bevy_asset_loader depends on newer version.
bevy_common_assets = { version = "0.15.0", features = ["ron"] }
bevy_ecs_tilemap = "0.18.1"
bevy_enhanced_input = "0.24.1"
bevy_enoki = "0.6.0"
bevy_fast_light = "0.5.1"
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_prng = { version = "0.14.2", features = ["chacha20", "wyrand"] }
bevy_rand = "0.14.2"
bevy_rapier2d = { version = "0.33.0", default-features = false, features = [
 "dim2",
 "async-collider",
 "picking-backend",
 "to-bevy-mesh",
] }
bevy_spritesheet_animation = "6.1.0"
iyes_progress = "0.16.0"
ordered-float = "5.1.0"
polyanya = "0.16.1"
rand = "0.10.0"
serde = "1.0.228"
# Compile out low-severity logs to improve performance.
tracing = { version = "0.1.44", features = [
 "max_level_debug",
 "release_max_level_warn",
] }
virtual_joystick = { version = "2.7.1", default-features = false }
vleue_navigator = "0.15.0"

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.14.2", features = ["wasm_js"] }

[patch.crates-io]
# FIXME: Wait for new version to be released.
#        We need this because `geo` uses `rand ^0.8.0` in their latest release.
#        Also see: https://github.com/vleue/polyanya/issues/132
geo = { git = "https://github.com/georust/geo.git", rev = "a6e15a8b291c30211fb1b5ccf863c8820b2eb8db" }
geo-types = { git = "https://github.com/georust/geo.git", rev = "a6e15a8b291c30211fb1b5ccf863c8820b2eb8db" }

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = [
 "bevy/debug",
 # Improve compile times for dev builds by linking Bevy as a dynamic library.
 "bevy/dynamic_linking",
 "bevy/bevy_dev_tools",
 "bevy/bevy_ui_debug",
 # Improve error messages coming from Bevy
 "bevy/track_location",
 "bevy-inspector-egui",
 "bevy_rapier2d/debug-render-2d",
]
dev_native = [
 "dev",
 # Enable asset hot reloading for native dev builds.
 "bevy/file_watcher",
 # Enable embedded asset hot reloading for native dev builds.
 "bevy/embedded_watcher",
]

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
# FIXME: Remove workaround for https://github.com/rust-lang/rust/issues/81280 after it has been fixed
incremental = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.web-dev]
inherits = "dev"

[profile.web-dev.package."*"]
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
strip = "symbols"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
